Polished code names. Fixed broken notebook.

--- a/Course-Industry Matching.ipynb
+++ b/Course-Industry Matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -12,13 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 3.39 ms\n"
-=======
-      "CPU times: user 6.67 ms, sys: 0 ns, total: 6.67 ms\n",
-      "Wall time: 5.19 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "Wall time: 6.95 ms\n"
      ]
     }
    ],
@@ -33,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -42,13 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "CPU times: user 12.8 s, sys: 108 ms, total: 12.9 s\n",
-      "Wall time: 12.8 s\n"
-=======
-      "CPU times: user 11.3 s, sys: 10 ms, total: 11.3 s\n",
-      "Wall time: 11.3 s\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "CPU times: user 15.9 s, sys: 128 ms, total: 16 s\n",
+      "Wall time: 15.8 s\n"
      ]
     }
    ],
@@ -64,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -74,13 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "CPU times: user 3.06 s, sys: 72 ms, total: 3.14 s\n",
-      "Wall time: 3.12 s\n"
-=======
-      "CPU times: user 63.3 ms, sys: 0 ns, total: 63.3 ms\n",
-      "Wall time: 59.5 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "CPU times: user 3.79 s, sys: 84 ms, total: 3.87 s\n",
+      "Wall time: 3.84 s\n"
      ]
     }
    ],
@@ -96,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -117,7 +102,7 @@
        " 'ARCHITECTURAL']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +133,7 @@
        " 'BUILDING']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +164,7 @@
        " 'ENGINE']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,11 +175,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-=======
-   "execution_count": 29,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -204,19 +185,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "CPU times: user 192 ms, sys: 20 ms, total: 212 ms\n",
-      "Wall time: 219 ms\n"
-=======
-      "CPU times: user 86.7 ms, sys: 0 ns, total: 86.7 ms\n",
-      "Wall time: 86.2 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "CPU times: user 244 ms, sys: 32 ms, total: 276 ms\n",
+      "Wall time: 281 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
+    "import analysis\n",
+    "reload(analysis)\n",
     "from analysis import *\n",
     "\n",
     "# note: pandas and sklearn modules should be installed\n",
@@ -224,16 +202,12 @@
     "# Performs a content-based filtering technique using features.\n",
     "# vectorizer can be 'tfidf' or 'count'\n",
     "\n",
-    "CourseIndustry = likelihood_matrix(course_clusters, industry_clusters, vectorizer='tfidf', ngram_range=(3,4))"
+    "CourseIndustry = LikelihoodMatrix(course_clusters, industry_clusters, vectorizer='tfidf', ngram_range=(3,4))"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-=======
-   "execution_count": 30,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +246,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LINGUISTICS</th>\n",
-<<<<<<< HEAD
        "      <td> 0</td>\n",
        "      <td> 0</td>\n",
        "      <td> 0</td>\n",
@@ -390,125 +363,6 @@
        "      <td> 0.000000</td>\n",
        "      <td> 0.000000</td>\n",
        "      <td> 0</td>\n",
-=======
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.111031</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.023</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.020312</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.045016</td>\n",
-       "      <td>0.042213</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HARDWARE</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AGRICULTURAL</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.052721</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ELEMENTARY</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.034037</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NCII</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -547,11 +401,7 @@
        "[5 rows x 146 columns]"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 8,
-=======
-     "execution_count": 30,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,11 +412,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 9,
-=======
-   "execution_count": 31,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -576,13 +422,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
-      "Wall time: 8.79 ms\n"
-=======
-      "CPU times: user 123 ms, sys: 3.33 ms, total: 127 ms\n",
-      "Wall time: 124 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "Wall time: 8.41 ms\n"
      ]
     }
    ],
@@ -606,11 +447,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 10,
-=======
-   "execution_count": 32,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -619,13 +456,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "CPU times: user 24 ms, sys: 0 ns, total: 24 ms\n",
-      "Wall time: 20.9 ms\n"
-=======
-      "CPU times: user 287 ms, sys: 3.33 ms, total: 290 ms\n",
-      "Wall time: 290 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "CPU times: user 28 ms, sys: 0 ns, total: 28 ms\n",
+      "Wall time: 26.2 ms\n"
      ]
     }
    ],
@@ -654,11 +486,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-=======
-   "execution_count": 33,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -667,13 +495,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 806 µs\n"
-=======
-      "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
-      "Wall time: 1.28 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 790 µs\n"
      ]
     },
     {
@@ -692,11 +515,7 @@
        "Name: BUSINESS, dtype: float64"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 11,
-=======
-     "execution_count": 33,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,11 +533,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-=======
-   "execution_count": 34,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -728,11 +543,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-<<<<<<< HEAD
-      "Wall time: 891 µs\n"
-=======
-      "Wall time: 1.51 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "Wall time: 988 µs\n"
      ]
     },
     {
@@ -747,11 +558,7 @@
        "Name: SCIENCE, dtype: float64"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 12,
-=======
-     "execution_count": 34,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,11 +572,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 13,
-=======
-   "execution_count": 35,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -778,13 +581,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 1.82 ms\n"
-=======
-      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
-      "Wall time: 19.2 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "Wall time: 1.58 ms\n"
      ]
     }
    ],
@@ -799,11 +597,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 14,
-=======
-   "execution_count": 36,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -812,13 +606,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 449 µs\n"
-=======
-      "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
-      "Wall time: 688 µs\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "Wall time: 436 µs\n"
      ]
     }
    ],
@@ -834,11 +623,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 15,
-=======
-   "execution_count": 37,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -854,11 +639,7 @@
        "dtype: float64"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 15,
-=======
-     "execution_count": 37,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,42 +651,27 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 16,
-=======
-   "execution_count": 38,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 2.14 ms\n"
-=======
-      "CPU times: user 30 ms, sys: 0 ns, total: 30 ms\n",
-      "Wall time: 27.9 ms\n"
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+      "Wall time: 2.25 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "56.11440517434135"
       ]
      },
-     "execution_count": 16,
-=======
-       "55.353636624354294"
-      ]
-     },
-     "execution_count": 38,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,11 +688,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 17,
-=======
-   "execution_count": 39,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -935,8 +697,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
-      "Wall time: 20.6 ms\n"
+      "CPU times: user 28 ms, sys: 0 ns, total: 28 ms\n",
+      "Wall time: 77.1 ms\n"
      ]
     }
    ],
@@ -946,17 +708,13 @@
     "# You can also get the dot product of data frames\n",
     "# to get bridged likelihood\n",
     "\n",
-    "IndustryJob = likelihood_matrix(industry_clusters, job_industry_clusters, vectorizer='tfidf', ngram_range=(3,4))\n",
+    "IndustryJob = LikelihoodMatrix(industry_clusters, job_industry_clusters, vectorizer='tfidf', ngram_range=(3,4))\n",
     "CourseJob = CourseIndustry * IndustryJob"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 18,
-=======
-   "execution_count": 40,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -964,17 +722,10 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "0.29094734615360518"
       ]
      },
-     "execution_count": 18,
-=======
-       "0.28752848943447895"
-      ]
-     },
-     "execution_count": 40,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,11 +736,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 19,
-=======
-   "execution_count": 41,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -1000,11 +747,7 @@
        "2.0380836694137852"
       ]
      },
-<<<<<<< HEAD
-     "execution_count": 19,
-=======
-     "execution_count": 41,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,11 +758,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 20,
-=======
-   "execution_count": 42,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -1027,17 +766,10 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "37.74019144084599"
       ]
      },
-     "execution_count": 20,
-=======
-       "37.428856177544361"
-      ]
-     },
-     "execution_count": 42,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,11 +780,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 21,
-=======
-   "execution_count": 43,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -1065,11 +793,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 22,
-=======
-   "execution_count": 44,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1077,17 +801,10 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD
        "68.850745229040243"
       ]
      },
-     "execution_count": 22,
-=======
-       "69.022835016757483"
-      ]
-     },
-     "execution_count": 44,
->>>>>>> 61fd994dcf962b61caad03ff01027568b4f165ee
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
