Added job title to cleaning.

--- a/Course-Industry Matching.ipynb
+++ b/Course-Industry Matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -13,7 +13,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 6.95 ms\n"
+      "Wall time: 4.02 ms\n"
      ]
     }
    ],
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.9 s, sys: 128 ms, total: 16 s\n",
-      "Wall time: 15.8 s\n"
+      "CPU times: user 11.5 s, sys: 116 ms, total: 11.6 s\n",
+      "Wall time: 11.5 s\n"
      ]
     }
    ],
@@ -47,9 +47,9 @@
     "# note: enchant module and library should be installed\n",
     "from cleaning import clean\n",
     "\n",
-    "clean_courses = clean(raw_courses, 'course', 'data/course_dictionary.txt')\n",
-    "clean_industries = clean(raw_industries, 'industry', 'data/industry_dictionary.txt')\n",
-    "clean_job_industries = clean(raw_job_industries, 'industry', 'data/industry_dictionary.txt')"
+    "clean_courses = clean(raw_courses, style='course')\n",
+    "clean_industries = clean(raw_industries, style='industry')\n",
+    "clean_job_industries = clean(raw_job_industries, style='job title')"
    ]
   },
   {
@@ -64,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.79 s, sys: 84 ms, total: 3.87 s\n",
-      "Wall time: 3.84 s\n"
+      "CPU times: user 2.96 s, sys: 88 ms, total: 3.04 s\n",
+      "Wall time: 3.02 s\n"
      ]
     }
    ],
@@ -153,15 +153,15 @@
      "data": {
       "text/plain": [
        "['BUSINESS',\n",
-       " 'CALLCENTER',\n",
+       " 'CALL',\n",
+       " 'CENTER',\n",
        " 'COMPUTER',\n",
        " 'CONSTRUCTION',\n",
        " 'DEPARTMENT',\n",
        " 'DESIGN',\n",
        " 'DEVELOPMENT',\n",
        " 'DISTRIBUTION',\n",
-       " 'EDUCATION',\n",
-       " 'ENGINE']"
+       " 'ENGINEERING']"
       ]
      },
      "execution_count": 8,
@@ -185,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 244 ms, sys: 32 ms, total: 276 ms\n",
-      "Wall time: 281 ms\n"
+      "CPU times: user 224 ms, sys: 16 ms, total: 240 ms\n",
+      "Wall time: 244 ms\n"
      ]
     }
    ],
@@ -423,7 +423,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
-      "Wall time: 8.41 ms\n"
+      "Wall time: 7.36 ms\n"
      ]
     }
    ],
@@ -456,8 +456,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28 ms, sys: 0 ns, total: 28 ms\n",
-      "Wall time: 26.2 ms\n"
+      "CPU times: user 24 ms, sys: 0 ns, total: 24 ms\n",
+      "Wall time: 22.9 ms\n"
      ]
     }
    ],
@@ -496,7 +496,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 790 µs\n"
+      "Wall time: 1.28 ms\n"
      ]
     },
     {
@@ -542,8 +542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 988 µs\n"
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 1.01 ms\n"
      ]
     },
     {
@@ -582,7 +582,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 1.58 ms\n"
+      "Wall time: 3.27 ms\n"
      ]
     }
    ],
@@ -607,7 +607,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 436 µs\n"
+      "Wall time: 806 µs\n"
      ]
     }
    ],
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -661,8 +661,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 2.25 ms\n"
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 378 µs\n"
      ]
     },
     {
@@ -671,7 +671,7 @@
        "56.11440517434135"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -697,8 +697,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 28 ms, sys: 0 ns, total: 28 ms\n",
-      "Wall time: 77.1 ms\n"
+      "CPU times: user 44 ms, sys: 0 ns, total: 44 ms\n",
+      "Wall time: 41 ms\n"
      ]
     }
    ],
@@ -714,28 +714,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.29094734615360518"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CourseJob.recommendation_score('PHYSICS', 'MANAGEMENT')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {
     "collapsed": false
@@ -744,7 +722,7 @@
     {
      "data": {
       "text/plain": [
-       "2.0380836694137852"
+       "0.1885759022541024"
       ]
      },
      "execution_count": 21,
@@ -753,7 +731,7 @@
     }
    ],
    "source": [
-    "CourseJob.recommendation_score('COMPUTER SCIENCE', 'ARCHITECTURE')"
+    "CourseJob.recommendation_score('PHYSICS', 'MANAGEMENT')"
    ]
   },
   {
@@ -766,10 +744,32 @@
     {
      "data": {
       "text/plain": [
-       "37.74019144084599"
+       "2.0426738449004129"
       ]
      },
      "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CourseJob.recommendation_score('COMPUTER SCIENCE', 'ARCHITECTURE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37.848446661970648"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -801,10 +801,10 @@
     {
      "data": {
       "text/plain": [
-       "68.850745229040243"
+       "69.028661985060339"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
