--- a/Course-Industry Matching.ipynb
+++ b/Course-Industry Matching.ipynb
@@ -12,8 +12,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 4.02 ms\n"
+      "CPU times: user 6.67 ms, sys: 0 ns, total: 6.67 ms\n",
+      "Wall time: 10.6 ms\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11.5 s, sys: 116 ms, total: 11.6 s\n",
-      "Wall time: 11.5 s\n"
+      "CPU times: user 10.5 s, sys: 487 ms, total: 11 s\n",
+      "Wall time: 10.4 s\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -64,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.96 s, sys: 88 ms, total: 3.04 s\n",
-      "Wall time: 3.02 s\n"
+      "CPU times: user 3.52 s, sys: 700 ms, total: 4.22 s\n",
+      "Wall time: 3.56 s\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -102,7 +102,7 @@
        " 'ARCHITECTURAL']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
        " 'BUILDING']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +164,7 @@
        " 'ENGINEERING']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -185,8 +185,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 224 ms, sys: 16 ms, total: 240 ms\n",
-      "Wall time: 244 ms\n"
+      "CPU times: user 290 ms, sys: 73.3 ms, total: 363 ms\n",
+      "Wall time: 376 ms\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -246,123 +246,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>LINGUISTICS</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.111282</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.111282</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.020568</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.045183</td>\n",
-       "      <td> 0.042346</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.020568</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.045183</td>\n",
+       "      <td>0.042346</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>STUDIES</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HARDWARE</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>HOSPITALITY</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.108406</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.108406</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ELEMENTARY</th>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td> 0.112116</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0.000000</td>\n",
-       "      <td> 0</td>\n",
+       "      <td>0.112116</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -401,7 +401,7 @@
        "[5 rows x 146 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -422,8 +422,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
-      "Wall time: 7.36 ms\n"
+      "CPU times: user 117 ms, sys: 3.33 ms, total: 120 ms\n",
+      "Wall time: 119 ms\n"
      ]
     }
    ],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -456,8 +456,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24 ms, sys: 0 ns, total: 24 ms\n",
-      "Wall time: 22.9 ms\n"
+      "CPU times: user 263 ms, sys: 0 ns, total: 263 ms\n",
+      "Wall time: 263 ms\n"
      ]
     }
    ],
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -495,8 +495,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 1.28 ms\n"
+      "CPU times: user 0 ns, sys: 3.33 ms, total: 3.33 ms\n",
+      "Wall time: 1.86 ms\n"
      ]
     },
     {
@@ -515,7 +515,7 @@
        "Name: BUSINESS, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -542,8 +542,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 1.01 ms\n"
+      "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
+      "Wall time: 2.87 ms\n"
      ]
     },
     {
@@ -558,7 +558,7 @@
        "Name: SCIENCE, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -581,8 +581,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 3.27 ms\n"
+      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
+      "Wall time: 21.8 ms\n"
      ]
     }
    ],
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -607,7 +607,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 806 µs\n"
+      "Wall time: 575 µs\n"
      ]
     }
    ],
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -639,7 +639,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -661,17 +661,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
-      "Wall time: 378 µs\n"
+      "CPU times: user 33.3 ms, sys: 0 ns, total: 33.3 ms\n",
+      "Wall time: 30.3 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "56.11440517434135"
+       "56.114405174341321"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -697,8 +697,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 44 ms, sys: 0 ns, total: 44 ms\n",
-      "Wall time: 41 ms\n"
+      "CPU times: user 60 ms, sys: 6.67 ms, total: 66.7 ms\n",
+      "Wall time: 65.6 ms\n"
      ]
     }
    ],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -722,10 +722,10 @@
     {
      "data": {
       "text/plain": [
-       "0.1885759022541024"
+       "0.18857590225410248"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -744,10 +744,10 @@
     {
      "data": {
       "text/plain": [
-       "2.0426738449004129"
+       "2.0426738449004134"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -769,7 +769,7 @@
        "37.848446661970648"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -801,10 +801,10 @@
     {
      "data": {
       "text/plain": [
-       "69.028661985060339"
+       "69.028661985060353"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
